--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@prisma/client": "^6.2.1",
     "@sendgrid/mail": "^8.1.2",
     "@tanstack/react-query": "^5.0.0",
+    "@tanstack/react-query-devtools": "^5.64.2",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
